<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.authentication.AuthenticationActivity">

    <ImageView
        android:id="@+id/iv_page_icon"
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tv_app_title"
        android:layout_marginTop="150dp"
        android:layout_marginBottom="10dp"
        android:src="@drawable/ic_dicoding" />

    <TextView
        android:id="@+id/tv_app_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/iv_page_icon"
        android:text="@string/dicoding_story_app"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="24sp"
        android:layout_margin="10dp"
        android:alpha="0"
        tools:alpha="1" />

    <TextView
        android:id="@+id/page_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/tv_app_title"
        app:layout_constraintStart_toStartOf="@id/tv_app_title"
        app:layout_constraintEnd_toEndOf="@id/tv_app_title"
        android:text="@string/page_description"
        android:alpha="0"
        tools:alpha="1" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/page_description"
        app:layout_constraintTop_toBottomOf="@id/page_description"
        android:layout_marginTop="40dp"
        android:text="@string/login"
        android:alpha="0"
        tools:alpha="1" />

    <Button
        android:id="@+id/btn_signup"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/signup"
        app:layout_constraintEnd_toEndOf="@id/page_description"
        app:layout_constraintTop_toTopOf="@id/btn_login"
        android:alpha="0"
        tools:alpha="1" />

</androidx.constraintlayout.widget.ConstraintLayout>