<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.addstory.AddStoryActivity">

    <ImageView
        android:id="@+id/iv_image_preview"
        android:layout_width="0dp"
        android:layout_height="300dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="30dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:scaleType="fitCenter"
        app:srcCompat="@drawable/ic_image_placeholder"
        android:layout_marginBottom="10dp" />

    <Button
        android:id="@+id/btn_camera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/camera"
        app:layout_constraintTop_toBottomOf="@id/iv_image_preview"
        app:layout_constraintStart_toStartOf="@id/ed_add_description_layout"
        android:drawableLeft="@drawable/ic_camera"/>

    <Button
        android:id="@+id/btn_gallery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gallery"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="@id/ed_add_description_layout"
        app:layout_constraintTop_toTopOf="@id/btn_camera"
        android:drawableLeft="@drawable/ic_gallery"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ed_add_description_layout"
        android:layout_width="0dp"
        android:layout_height="150dp"
        app:layout_constraintTop_toBottomOf="@id/btn_camera"
        app:layout_constraintEnd_toEndOf="@id/button_add"
        app:layout_constraintStart_toStartOf="@id/button_add"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:gravity="top"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:hint="@string/description">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ed_add_description"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="top"
            android:inputType="textCapSentences"/>
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/layout_checkbox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/ed_add_description_layout"
        app:layout_constraintStart_toStartOf="@id/ed_add_description_layout"
        app:layout_constraintEnd_toEndOf="@id/ed_add_description_layout"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">
        <CheckBox
            android:id="@+id/cb_location"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/include_location"
            android:layout_marginStart="10dp"
            android:textSize="16sp"/>
    </LinearLayout>

    <Button
        android:id="@+id/button_add"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="10dp"
        android:text="@string/upload"
        app:layout_constraintTop_toBottomOf="@id/layout_checkbox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>