<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.signup.SignupActivity">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="200dp"
        android:gravity="center"
        android:textStyle="bold"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:textSize="40sp"
        android:text="@string/sign_up"
        android:alpha="0"
        tools:alpha="1"/>

    <TextView
        android:id="@+id/tv_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/tv_title"
        app:layout_constraintEnd_toEndOf="@id/tv_title"
        app:layout_constraintTop_toBottomOf="@id/tv_title"
        android:layout_marginTop="20dp"
        android:text="@string/signup_description"
        android:textSize="16sp"
        android:alpha="0"
        tools:alpha="1"/>

    <TextView
        android:id="@+id/tv_name_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_description"
        android:text="@string/Name"
        app:layout_constraintStart_toStartOf="@id/tv_description"
        android:layout_marginTop="20dp"
        android:alpha="0"
        tools:alpha="1"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edit_text_layout_name"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@id/tv_description"
        app:layout_constraintStart_toStartOf="@id/tv_description"
        app:layout_constraintTop_toBottomOf="@id/tv_name_title"
        app:startIconDrawable="@drawable/ic_person"
        android:alpha="0"
        tools:alpha="1">

        <com.dicoding.dicodingstoryapplication.customview.CustomEditText
            android:id="@+id/ed_register_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textCapWords"
            tools:ignore="SpeakableTextPresentCheck"
            android:alpha="0"
            tools:alpha="1"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_email_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/edit_text_layout_name"
        android:text="@string/email"
        app:layout_constraintStart_toStartOf="@id/edit_text_layout_name"
        android:layout_marginTop="20dp"
        android:alpha="0"
        tools:alpha="1"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edit_text_layout_email"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@id/edit_text_layout_name"
        app:layout_constraintStart_toStartOf="@id/edit_text_layout_name"
        app:layout_constraintTop_toBottomOf="@id/tv_email_title"
        app:startIconDrawable="@drawable/ic_email"
        android:alpha="0"
        tools:alpha="1">

        <com.dicoding.dicodingstoryapplication.customview.CustomEmailEditText
            android:id="@+id/ed_register_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textEmailAddress"
            tools:ignore="SpeakableTextPresentCheck"
            android:alpha="0"
            tools:alpha="1"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_password_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/edit_text_layout_email"
        android:text="@string/password"
        app:layout_constraintStart_toStartOf="@id/edit_text_layout_email"
        android:layout_marginTop="20dp"
        android:alpha="0"
        tools:alpha="1"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edit_text_layout_password"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@id/edit_text_layout_email"
        app:layout_constraintStart_toStartOf="@id/edit_text_layout_email"
        app:layout_constraintTop_toBottomOf="@id/tv_password_title"
        app:startIconDrawable="@drawable/ic_lock"
        android:alpha="0"
        tools:alpha="1">

        <com.dicoding.dicodingstoryapplication.customview.CustomPasswordEditText
            android:id="@+id/ed_register_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            tools:ignore="SpeakableTextPresentCheck"
            android:alpha="0"
            tools:alpha="1"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_signup"
        android:layout_width="0dp"
        android:layout_height="50dp"
        app:layout_constraintTop_toBottomOf="@id/edit_text_layout_password"
        app:layout_constraintStart_toStartOf="@id/edit_text_layout_password"
        app:layout_constraintEnd_toEndOf="@id/edit_text_layout_password"
        android:layout_marginTop="20dp"
        android:text="@string/sign_up"
        android:alpha="0"
        tools:alpha="1"/>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />
</androidx.constraintlayout.widget.ConstraintLayout>